# prognosis

./: .travis.yml  CONTRIBUTING.md  README.md  setup.cfg  tox.ini
prognosis/: __init__.py  __main__.py
