[metadata]
name = prognosis
home-page = https://github.com/4383/prognosis/
summary = Prognosis network access issues for pypi and python warehouse
description-file = 
    README.md
author = Hervé Beraud
author-email = hberaud@redhat.com
licence = MIT
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    prognosis

[extras]
devel=
    fixtures
    pbr
    tox
    bandit

[entry_points]
console_scripts =
    prognosis = prognosis.__main__:main

[wheel]
universal = 1
